ui: fix problem tag item color in dark mode

--- a/packages/ui-default/theme/dark.styl
+++ b/packages/ui-default/theme/dark.styl
@@ -279,6 +279,9 @@ $hover-background-color = #424242
     background-color: #1f1f1f
     color: #aaa!important
 
+  .problem__tag-item
+    color: #d8dee3
+
   label.textbox.material input
     border-color: #333
     color: #aaa
